tests/NormalTests/paczka1/fuzzy1/74922357.err
Error in line 12: YNcN5Kim2h S610 31,1
Error in line 16: YNcN5Kim2h A132 8,4
Error in line 6: S854 S610 34,7
Error in line 32: rWp3UpaE6 S854 77,9
Error in line 37: YNcN5Kim2h S854 39,3
